<resources>
    <string name="app_name">Lille promille</string>

    <string name="logged_in_as">Logged in as:&#160;</string>
    <string name="log_out">Log out</string>
    <string name="add_alcohol_unit">Add alcohol unit</string>

    <string name="username">Username</string>
    <string name="history">History</string>
    <string name="beverage_catalog">Beverage Catalog</string>
    <string name="session">Session</string>

    <!-- Nav -->
    <string name="settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="map">Map</string>
    <string name="you_are_in_the_friends_fragment">You are in the friends fragment</string>
    <string name="you_are_in_the_map_fragment">You are in the map fragment</string>
    <string name="add_beverage">Add beverage</string>

    <!-- Session -->
    <string name="time_left">Time left </string>
    <string name="time_left_format">Time left: 00:00:00</string>
    <string name="current_per_mill">Current per mill </string>
    <string name="current_per_mill_format">Current per mill: 0.000</string>
    <string name="time_elapsed">Time elapsed </string>
    <string name="time_elapsed_format">Time elapsed: 00:00:00 </string>
    <string name="remove_alcohol_unit">Remove beverage</string>
    <string name="you_are_sober">You are sober :)</string>
    <string name="session_history">Session History</string>

    <!-- Settings-->
    <string name="title_activity_settings">SettingsActivity</string>

    <!--User info-->
    <string name="user_info">User info</string>
    <string name="user_age">Age</string>
    <string name="user_height">Height</string>
    <string name="user_weight">Weight</string>
    <string name="user_username">Username</string>
    <string name="user_full_name">Full name</string>
    <string name="user_gender">Gender</string>

    <!-- Placeholders -->
    <string name="placeholder_beverage_name">"Bacardi"</string>
    <string name="placeholder_beverage_alcohol">40%</string>
    <string name="placeholder_beverage_volume">30ml</string>
    <string name="info">info</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="you_have_no_friends">You have no friends :(</string>
    <string name="add_drink">Add Drink</string>
    <string name="placeholder_session_card_date">28/11/21</string>
    <string name="placeholder_session_card_userWeight">82,6 kg</string>
    <string name="placeholder_session_card_sex">Male</string>
    <string name="add_drink_no">Legg til en drikke</string>
    <string name="name">Navn</string>
    <string name="category">Kategori</string>
    <string name="volume">Volum</string>
    <string name="percent">Prosent</string>

    <string name="finish_dialog_text">You are sober. \nDo you want to end and save the session?</string>
    <string name="yes">Yes</string>
    <string name="continue_drinking">Continue drinking</string>
    <string name="choose_drink">Velg drikke</string>
    <string name="fab_session_description">Knapp som åpner liste av drikker</string>
    <string name="your_drinks">Dine drikker</string>
    <string name="start_new_session">Start new session</string>
    <string name="start_session">Start Session</string>
    <string name="proceed">Proceed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maxPerMill">Max per mill</string>
    <string name="startTime">Start time</string>
    <string name="endTime">End time</string>
    <string name="duration">Duration</string>
    <string name="session_title_dynamic">Session: {title}</string>

</resources>