<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_info">

        <EditTextPreference
            app:key="full_name"
            app:title="@string/user_full_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="username"
            app:title="@string/user_username"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="male"
            app:entries="@array/gender_entries"
            app:entryValues="@array/gender_values"
            app:key="gender"
            app:title="@string/user_gender"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="age"
            app:title="@string/user_age"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="height"
            app:title="@string/user_height"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="weight"
            app:title="@string/user_weight"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="dark_mode"
            app:title="@string/enableDarkMode" />

    </PreferenceCategory>

</PreferenceScreen>