<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_info">

        <EditTextPreference
            app:key="full_name"
            app:title="@string/user_full_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="username"
            app:title="@string/user_username"
            app:useSimpleSummaryProvider="true" />

        <!-- <EditTextPreference
             app:key="gender"
             app:title="@string/user_gender"
             app:useSimpleSummaryProvider="true" />-->

        <ListPreference
            app:defaultValue="male"
            app:entries="@array/gender_entries"
            app:entryValues="@array/gender_values"
            app:key="gender"
            app:title="@string/user_gender"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="age"
            app:title="@string/user_age"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="height"
            app:title="@string/user_height"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="weight"
            app:title="@string/user_weight"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <Preference
        android:key="@string/proceed"
        android:layout="@layout/proceed_button"/>

    <!--<PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <PreferenceCategory app:title="@string/sync_header">

            <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title" />

            <SwitchPreferenceCompat
                app:dependency="sync"
                app:key="attachment"
                app:summaryOff="@string/attachment_summary_off"
                app:summaryOn="@string/attachment_summary_on"
                app:title="@string/attachment_title" />

        </PreferenceCategory>

    </PreferenceCategory>-->

</PreferenceScreen>