<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <!-- <item
             android:id="@+id/sessionFragment"
             android:title="Session"
             android:icon="@drawable/ic_baseline_glass_mug_variant" />-->

        <item
            android:id="@+id/beverageCatalogFragment"
            android:icon="@drawable/ic_baseline_liquor_24"
            android:title="@string/beverage_catalog" />

        <item
            android:id="@+id/sessionHistoryFragment"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/history" />
    </group>
    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/log_out" />
</menu>