<?xml version="1.0" encoding="utf-8"?>
<com.apachat.swipereveallayout.core.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:dragEdge="right"
    app:mode="normal">

    <!--Swipe Layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageViewInfo"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/info"
            android:gravity="center"
            android:padding="0dp"
            android:src="@drawable/ic_baseline_info_24"
            app:tint="@color/blue" />

        <ImageView
            android:id="@+id/imageViewDelete"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/info"
            android:gravity="center"
            android:padding="0dp"
            android:src="@drawable/ic_baseline_remove_circle_24"
            app:tint="@color/red" />

    </LinearLayout>

    <!--Main Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/beverageRecycleViewBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/beverageNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/placeholder_beverage_name"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/beverageAlcoholPercentageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/placeholder_beverage_alcohol"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/beverageVolumeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/placeholder_beverage_volume"
            android:textSize="@dimen/font_size_medium" />

    </LinearLayout>

</com.apachat.swipereveallayout.core.SwipeLayout>