<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".fragments.SessionHistoryDetailFragment">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/textViewSessionName"
                android:text="@string/name"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewSessionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textViewMaxPerMill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing"
                android:labelFor="@id/textViewSessionMaxPerMill"
                android:text="@string/maxPerMill"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSessionName" />

            <TextView
                android:id="@+id/textViewSessionMaxPerMill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maxPerMill"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewMaxPerMill" />

            <TextView
                android:id="@+id/textViewStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing"
                android:labelFor="@id/textViewSessionStartTime"
                android:text="@string/startTime"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSessionMaxPerMill" />

            <TextView
                android:id="@+id/textViewSessionStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startTime"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStartTime" />

            <TextView
                android:id="@+id/textViewEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing"
                android:labelFor="@id/textViewSessionStartTime"
                android:text="@string/endTime"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSessionStartTime" />

            <TextView
                android:id="@+id/textViewSessionEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endTime"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEndTime" />

            <TextView
                android:id="@+id/textViewDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing"
                android:labelFor="@id/textViewSessionStartTime"
                android:text="@string/duration"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSessionEndTime" />

            <TextView
                android:id="@+id/textViewSessionDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDuration" />

            <TextView
                android:id="@+id/textViewAlcoholUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing"
                android:text="@string/your_drinks"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSessionDuration" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/beverageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAlcoholUnits" />

            <include
                layout="@layout/component_pie_chart"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="@dimen/list_item_spacing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/beverageRecyclerView" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
